syntax = "proto3";

package chat;

option go_package = "/proto";

message ChatMessage {
    string sender = 1;
    int64 sendTime = 2;
    string content = 3;
}

message ChatChannelData {
    repeated ChatMessage chatMessages = 1;
}